Added Keypoints-based Face Recognition Algorithm (faces/recognition), integrated prototype-faces (faces), logger (gui_logger.py and logger.py) and small other code modification

--- a/plugin_config.ini
+++ b/plugin_config.ini
@@ -1,6 +1,8 @@
 [Plugin Management]
-default_plugins_to_load = EqualizeHistPlugin;;FeatureDetectorsPlugin
+default_plugins_to_load = EqualizeHistPlugin;;FeatureDetectorsPlugin;;FaceRecognitionPlugin
 
 [Default Plugin: EqualizeHistPlugin]
 
 [Default Plugin: FeatureDetectorsPlugin]
+
+[Default Plugin: FaceRecognitionPlugin]
