--- a/plugin_config.ini
+++ b/plugin_config.ini
@@ -1,8 +1,10 @@
 [Plugin Management]
-default_plugins_to_load = EqualizeHistPlugin;;FeatureDetectorsPlugin;;FaceRecognitionPlugin
+default_plugins_to_load = EqualizeHistPlugin;;FeatureDetectorsPlugin;;FaceRecognitionPlugin;;PalmRecognitionPlugin
 
 [Default Plugin: EqualizeHistPlugin]
 
 [Default Plugin: FeatureDetectorsPlugin]
 
 [Default Plugin: FaceRecognitionPlugin]
+
+[Default Plugin: PalmRecognitionPlugin]
