--- a/plugin_config.ini
+++ b/plugin_config.ini
@@ -1,7 +1,7 @@
 [Plugin Management]
-default_plugins_to_load = EqualizeHistPlugin;;FeatureDetectorsPlugin;;FaceRecognitionPlugin;;PalmRecognitionPlugin
+default_plugins_to_load = ImageTransformPlugin;;FeatureDetectorsPlugin;;FaceRecognitionPlugin;;PalmRecognitionPlugin
 
-[Default Plugin: EqualizeHistPlugin]
+[Default Plugin: ImageTransformPlugin]
 
 [Default Plugin: FeatureDetectorsPlugin]
 
